# python-calculator-library

./: .gitignore  README.md  pyproject.toml
calculator/: __init__.py  advanced.py  basic.py
tests/: test_basic.py
